# fastapi-demo

./: .env.local  .env.test  .gitignore  pyproject.toml
app/: app_initializer.py  main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: index.py
app/api/v1/index/: endpoint.py  index_repository.py
app/api/v2/: routes.py
app/api/v2/hello/: endpoint.py
app/core/: container.py  database.py  database_session.py  db_session.py  run_sync.py  schema_util.py  settings.py  singleton_instance.py
app/domain/: __init__.py
app/domain/v1/index/: __init__.py  dto.py  endpoint.py  index_router.py  indexdto.py
app/dtos/: common.py  user.py
app/entities/: base.py  user.py
app/internal/: logging_api_route.py  logging_middleware.py
app/repositories/: user_repository.py
app/routes/: index.py  router.py
app/routes/api/v1/: router.py  user.py
app/routes/api/v2/: router.py
app/routes/samples/: dependencies.py  http_basic.py  index.py  path.py  response_sample.py  router.py
app/usecases/user/: user_create_usecase.py  user_usecase.py
tests/: test_main.py
