[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["codex <gwonhyeong.tak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
httpx = "^0.24.1"
anyio = "^3.7.1"
pytest = "^7.4.0"
trio = "^0.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
